# bio-seq

./: Cargo.toml  README.md
.github/workflows/: rust.yml
bio-seq/: Cargo.toml  LICENSE  README.md
bio-seq-derive/: Cargo.toml  README.md
bio-seq-derive/src/: codec.rs  lib.rs  seqarray.rs
bio-seq-derive/tests/: compile_errors.rs
bio-seq-derive/tests/fail/: bad_sequence.rs  bad_sequence.stderr  invalid_codec.rs  invalid_codec.stderr  non_ascii.rs  non_ascii.stderr
bio-seq/examples/: aminokmers.rs  codec-bench.rs  seq2bin.rs
bio-seq/src/: bitops.rs  codec.rs  error.rs  hash.rs  kmer.rs  lib.rs  seq.rs  storage.rs
bio-seq/src/codec/: amino.rs  degenerate.rs  dna.rs  iupac.rs  masked.rs  mod.rs  text.rs
bio-seq/src/codec/degenerate/: dna.rs  iupac.rs  mk.rs  mod.rs  ry.rs  ws.rs
bio-seq/src/codec/masked/: dna.rs  iupac.rs  mod.rs
bio-seq/src/kmer/: integral32.rs  integral64.rs  mod.rs  simd.rs  storage.rs  wasm.rs
bio-seq/src/seq/: array.rs  index.rs  iterators.rs  mod.rs  slice.rs  storage.rs
bio-seq/src/seq/storage/: bitvec.rs  bv.rs  bytevec.rs
bio-seq/src/storage/: avx2.rs  bv.rs  integral32.rs  integral64.rs
bio-seq/src/translation/: mod.rs  standard.rs
bio_seq_derive/: Cargo.toml
bio_seq_derive/src/: lib.rs
examples/: aminokmers.rs
src/: alphabets.rs  bigk.rs  error.rs  kmer.rs  lib.rs  seq.rs
src/alphabet/: amino.rs  dna.rs  iupac.rs  mod.rs
src/codec/: amino.rs  dna.rs  iupac.rs  mod.rs  text.rs
src/codec/ascii/: iupac.rs  mod.rs
src/seq/: iterators.rs  mod.rs
src/translation/: mod.rs  standard.rs
