[package]
name = "bio-seq"
version = "0.8.0"
authors = ["jeff-k <jeff_k@fastmail.com>"]
edition = "2021"
description = "Bit packed and well-typed biological sequences"
homepage = "https://github.com/jeff-k/bio-seq"
documentation = "https://docs.rs/bio-seq"
readme = "README.md"
license = "MIT"
keywords = ["bioinformatics", "kmer", "sequencing", "dna", "iupac"]


[dependencies]
bitvec = "1"
bio-seq-derive = "1.0.0"
