[package]
name = "bio-seq"
version = "0.8.8"
authors = ["jeff-k <jeff_k@fastmail.com>"]
edition = "2021"
description = "Bit packed and well-typed biological sequences"
homepage = "https://github.com/jeff-k/bio-seq"
documentation = "https://docs.rs/bio-seq"
readme = "README.md"
license = "MIT"
keywords = ["bioinformatics", "kmer", "sequencing", "dna", "iupac"]

[dev-dependencies]
bio-streams = { git="https://github.com/jeff-k/bio-streams.git" }
clap = { version="4", features=["derive"] }

[dependencies]
bitvec = "1"
bio-seq-derive = { path="../bio-seq-derive" }
# bio-seq-derive = "1.6.0"

[[example]]
name = "aminokmers"
