[package]
name = "bio-seq-derive"
version = "4.10.0"
authors = ["jeff-k <jeff_k@fastmail.com>"]
edition = "2021"
repository = "https://github.com/jeff-k/bio-seq"
description = "Derive macros for the bio-seq crate"
license = "MIT"

[dependencies]
syn = { version="2", features=["full"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
trybuild = "1.0"
bio-seq = { path = "../bio-seq" }

[lib]
proc-macro = true
