[package]
name = "bio-seq"
version = "0.13.5"
authors = ["jeff-k <jeff_k@fastmail.com>"]
edition = "2021"
description = "Bit packed and well-typed biological sequences"
repository = "https://github.com/jeff-k/bio-seq"
documentation = "https://docs.rs/bio-seq"
license = "MIT"
keywords = ["bioinformatics", "genomics", "kmer", "dna", "sequence"]
categories = ["science::bioinformatics", "science::bioinformatics::genomics", "science::bioinformatics::proteomics", "science::bioinformatics::sequence-analysis"]
readme = "../README.md"
rust-version = "1.79"

#[dev-dependencies]
#bio-streams = { git="https://github.com/jeff-k/bio-streams.git" }
#clap = { version="4", features=["derive"] }

[dependencies]
bitvec = "1"
bio-seq-derive = { path = "../bio-seq-derive", version="4.9" }
serde = { version = "1", optional = true, features=["derive"] }
serde_derive = { version = "1", optional = true }

[features]
serde = ["dep:serde",  "dep:serde_derive", "bitvec/serde"]
translation = []
simd = []
extra_codecs = []

#[[example]]
#name = "aminokmers"

[package.metadata.docs.rs]
features = ["translation", "serde", "extra_codecs"]
# all-features = true
