[package]
name = "bio-seq"
version = "0.14.1"
authors = ["jeff-k <jeff_k@fastmail.com>"]
edition = "2021"
description = "Bit packed and well-typed biological sequences"
repository = "https://github.com/jeff-k/bio-seq"
documentation = "https://docs.rs/bio-seq"
license = "MIT"
keywords = ["bioinformatics", "genomics", "kmer", "dna", "sequence"]
categories = ["science::bioinformatics", "science::bioinformatics::genomics", "science::bioinformatics::proteomics", "science::bioinformatics::sequence-analysis"]
readme = "../README.md"
rust-version = "1.79"

[dev-dependencies]
clap = { version="4", features=["derive"] }
noodles = { version="0.87", features=["fasta"] }
bincode = "1.3"
tempfile = "3.0"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies]
bitvec = "1"
bio-seq-derive = { path = "../bio-seq-derive", version="4.10" }
serde = { version = "1", optional = true, features=["derive"] }
serde_derive = { version = "1", optional = true }

[features]
serde = ["dep:serde",  "dep:serde_derive", "bitvec/serde"]
translation = []
extra_codecs = []

[[example]]
name = "aminokmers"
required-features = ["noodles/fasta"]

[[example]]
name = "codec-bench"
required-features = ["extra_codecs"]

[[example]]
name = "seq2bin"
required-features = ["serde", "noodles/fasta"]

[package.metadata.docs.rs]
features = ["translation", "serde", "extra_codecs"]
all-features = true
